# SlideSLAM

./: .gitignore  .gitmodules  OBJECT_FILTERING_ANALYSIS.md  OBJECT_POSE_ACCESS_GUIDE.md  README.md  TOPIC_MAPPING_ANALYSIS.md  map_manager
src/: MAP_MANAGER_INTEGRATION_PLAN.md  topics.txt
src/SLIDE_SLAM/: adjust_time.py  ring.py  run_slide_slam_docker.sh
src/SLIDE_SLAM/backend/map_manager_msgs/: CMakeLists.txt  package.xml
src/SLIDE_SLAM/backend/map_manager_msgs/msg/: semanticObjArrayMsg.msg  semanticObjMsg.msg
src/SLIDE_SLAM/backend/multi_robot_utils_launch/launch/: publish_tf.launch
src/SLIDE_SLAM/backend/multi_robot_utils_launch/script/: timestamp_adjuster.py  tmux_multi_robot_with_bags_forest.sh  tmux_single_indoor_robot.sh  tmux_single_outdoor_kitti.sh  tmux_single_outdoor_robot.sh
src/SLIDE_SLAM/backend/sloam/: CMakeLists.txt
src/SLIDE_SLAM/backend/sloam/launch/: single_robot_sloam_test.launch
src/SLIDE_SLAM/backend/sloam/params/: sloam.yaml
src/SLIDE_SLAM/frontend/object_modeller/: CMakeLists.txt
src/faster-lio/config/: ouster128.yaml
src/faster-lio/include/: laser_mapping.h  pointcloud_preprocess.h
src/faster-lio/src/: laser_mapping.cc  pointcloud_preprocess.cc
src/lidar_cam_calibrater/: CMakeLists.txt  README.md  package.xml
src/lidar_cam_calibrater/include/lidar_cam_calibrater/: RegisterRGBD.h  testRGBD.h
src/lidar_cam_calibrater/launch/: register.launch
src/lidar_cam_calibrater/script/: image_masker.py
src/lidar_cam_calibrater/src/: GetCameraModel.cpp  RegisterRGBD.cpp  register_node.cpp  testRGBD.cpp
(+45 files in other folders)
